# maxio

./: CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  build.rs  warp-put-2026-03-24[084916]-F98H.json.zst
.github/workflows/: release.yml
src/: config.rs  embedded.rs  error.rs  lib.rs  main.rs  server.rs
src/api/: bucket.rs  console.rs  cors.rs  list.rs  mod.rs  multipart.rs  object.rs
src/auth/: middleware.rs  signature_v4.rs
src/storage/: chunk_reader.rs  crypto.rs  filesystem.rs  keys.rs  mod.rs
src/xml/: types.rs
tests/: aws_cli_test.sh  bench-remote.sh  bench.sh  integration.rs  mc_test.sh
ui/: index.html  package.json
ui/src/: App.svelte  app.css
ui/src/lib/: BucketList.svelte  BucketSettings.svelte  Login.svelte  ObjectBrowser.svelte  VersionHistory.svelte
ui/src/lib/components/ui/badge/: badge.svelte  index.ts
ui/src/lib/components/ui/button/: button.svelte
ui/src/lib/components/ui/callout/: callout.svelte  index.ts
ui/src/lib/components/ui/card/: card-title.svelte  card.svelte  index.ts
ui/src/lib/components/ui/helper/: helper.svelte  index.ts
ui/src/lib/components/ui/highlighted/: highlighted.svelte  index.ts
ui/src/lib/components/ui/kbd/: index.ts  kbd.svelte
ui/src/lib/components/ui/sonner/: sonner.svelte
ui/src/lib/components/ui/table/: table-head.svelte  table.svelte
ui/src/lib/components/ui/tag/: index.ts  tag.svelte
